<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="Hello World!"
        android:inputType="text"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="end"
        android:hint="@string/text_person_name"
        android:inputType="textPersonName"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/number"
        android:inputType="number"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/text_email_address"
        android:inputType="textEmailAddress"
        android:textSize="22sp" />

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="Start"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>