<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_layout"
        android:gravity="center"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:layout_marginTop="5dp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"/>

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="32sp"
        android:backgroundTint="@color/teal_200"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/home"
        android:textSize="32sp"
        android:backgroundTint="@color/teal_200"/>


</LinearLayout>